--- a/src/app/profile/about/about.component.html
+++ b/src/app/profile/about/about.component.html
@@ -7,8 +7,8 @@
                         <div class="h4 mt-0 title">About Me</div>
                             <p align="justify">Hello, my name is Oussema. I'm a Software Engineering Student at National Institute of Applied Science and Technology.</p>
                             <p align="justify">From a young age, I’ve always had a sense of motivation and passion driving me forward. Whether it’s exploring unique opportunities or learning additional skills, I bring these values to every experience throughout my life on a personal and professional level.</p>
-                            <p align="justify">Lover of innovation and everything related to generate new knowledge.Face problems with a smile and solve them as soon as possible. Very calculated about the time I spend and work I do.</p>
-                            <p align="justify">To learn more about me, keep exploring my site or reach out directly.</p>
+                            <p align="justify">Lover of innovation and everything related to generate new knowledge. Always tring to face problems with a smily face  and solve them as soon as possible. Always on point concerning  the time I need to  spend to achieve my work</p>
+                            <p align="justify">For further information , you can reach out to me on my website</p>
                     </div>
                 </div>    
                 <div class="col-lg-6 col-md-12">       
