add alert message to the form

--- a/src/app/profile/experience/experience.component.html
+++ b/src/app/profile/experience/experience.component.html
@@ -14,7 +14,7 @@
                                         <div class="h6 mt-0 title">Web development internship (2020-08 - 2020-09)</div>
                                         <ul>
                                             <li><p align="justify">Conception and development of a web platform.</p></li>
-                                            <li><p align="justify">Graphically visualize the different fixed and mobile services offered by Tunisie Telecom in the Sidi Bouzid region.</p></li>
+                                            <li><p align="justify">Graphically visualize the different fixe and mobile services offered by Tunisie Telecom in the Sidi Bouzid region.</p></li>
                                         </ul>
                                     </div>    
                                     <div class="col-lg-6">       
