fix list style experience component

--- a/src/app/profile/experience/experience.component.html
+++ b/src/app/profile/experience/experience.component.html
@@ -21,23 +21,23 @@
                                         <ul>
                                             <li class="list">Core Functionality</li>
                                             <ul>
-                                                <li>Web Development</li>
+                                                <li align="justify" style="list-style: circle;">Web Development</li>
                                             </ul>
                                             <li class="list">Technologies and Language</li>
                                             <ul>
                                                 <div class="row">
                                                     <div class="col-md-6">
-                                                            <li>Agile</li>
-                                                            <li>Angular9</li>
-                                                            <li>NodeJS</li>
-                                                            <li>ExpressJS</li>
-                                                            <li>Angular Material</li>
+                                                            <li align="justify" style="list-style: circle;">Agile</li>
+                                                            <li align="justify" style="list-style: circle;">Angular9</li>
+                                                            <li align="justify" style="list-style: circle;">NodeJS</li>
+                                                            <li align="justify" style="list-style: circle;">ExpressJS</li>
+                                                            <li align="justify" style="list-style: circle;">Angular Material</li>
                                                     </div>
                                                     <div class="col-md-6">
-                                                        <li>Bootstrap</li>
-                                                        <li>MongoDB</li>
-                                                        <li>Git</li>
-                                                        <li>Github</li>
+                                                        <li align="justify" style="list-style: circle;">Bootstrap</li>
+                                                        <li align="justify" style="list-style: circle;">MongoDB</li>
+                                                        <li align="justify" style="list-style: circle;">Git</li>
+                                                        <li align="justify" style="list-style: circle;">Github</li>
                                                     </div>
                                                 </div>   
                                             </ul>
@@ -65,21 +65,23 @@
                                         <ul>
                                             <li class="list">Core Functionality</li>
                                             <ul>
-                                                <li>Software Development</li>
+                                                <li align="justify" style="list-style: circle;">Software Development</li>
                                             </ul>
                                             <li class="list">Technologies and Language</li>
                                             <ul>
                                                 <div class="row">
                                                     <div class="col-md-6">
-                                                        <li>Ionic4</li>
-                                                        <li>Firebase</li>
-                                                        <li>Bootstrap</li>
-                                                        <li>Angular Material</li>
+
+                                                        <li align="justify" style="list-style: circle;">Ionic4</li>
+                                                        <li align="justify" style="list-style: circle;">Firebase</li>
+                                                        <li align="justify" style="list-style: circle;">Bootstrap</li>
+                                                        <li align="justify" style="list-style: circle;">Angular Material</li>
+                                                       
                                                     </div>
                                                     <div class="col-md-6">
-                                                        <li>Agile</li>
-                                                        <li>Bitbucked</li>
-                                                        <li>Git</li>
+                                                        <li align="justify" style="list-style: circle;">Agile</li>
+                                                        <li align="justify" style="list-style: circle;">Bitbucked</li>
+                                                        <li align="justify" style="list-style: circle;">Git</li>
                                                     </div>
                                                 </div>   
                                             </ul>
