--- a/src/app/profile/contact/contact.component.html
+++ b/src/app/profile/contact/contact.component.html
@@ -16,18 +16,34 @@
                         <div class="row mb-3">
                           <div class="col">
                             <div class="input-group">
-                              <input class="form-control" type="text" name="name" #name placeholder="Name"
-                                [(ngModel)]="model.name" #name="ngModel"
-                                [ngClass]="{ 'is-invalid': f.submitted && name.invalid }" required />
+
+                              <input 
+                              class="form-control" 
+                              type="text" 
+                              name="name" 
+                              #name 
+                              placeholder="Name"
+                              [(ngModel)]="model.name" 
+                              #name="ngModel"
+                              [ngClass]="{ 'is-invalid': f.submitted && name.invalid }" required />
+
                             </div>
                           </div>
                         </div>
                         <div class="row mb-3">
                           <div class="col">
                             <div class="input-container">
-                              <input class="form-control" type="text" name="subject" #subject placeholder="Subject"
-                                [(ngModel)]="model.subject" #subject="ngModel"
-                                [ngClass]="{ 'is-invalid': f.submitted && subject.invalid }" required />
+
+                              <input 
+                              class="form-control" 
+                              type="text" 
+                              name="subject" 
+                              #subject 
+                              placeholder="Subject"
+                              [(ngModel)]="model.subject" 
+                              #subject="ngModel"
+                              [ngClass]="{ 'is-invalid': f.submitted && subject.invalid }" required />
+
                             </div>
                           </div>
                         </div>
@@ -38,19 +54,26 @@
                               class="form-control" 
                               type="email" 
                               name="email"  
-                              #email placeholder="E-mail"
-                                [(ngModel)]="model.email" #email="ngModel"
-                                [ngClass]="{ 'is-invalid': f.submitted && email.invalid }"
-                                pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required />
+                              #email 
+                              placeholder="E-mail"
+                              [(ngModel)]="model.email" 
+                              #email="ngModel"
+                              [ngClass]="{ 'is-invalid': f.submitted && email.invalid }"
+                              pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required />
                             </div>
                           </div>
                         </div>
                         <div class="row mb-3">
                           <div class="col">
                             <div class="form-group">
-                              <textarea class="form-control" name="message" #message placeholder="Your Message"
-                                [(ngModel)]="model.message" #message="ngModel"
-                                [ngClass]="{ 'is-invalid': f.submitted && message.invalid }" required></textarea>
+                              <textarea 
+                              class="form-control" 
+                              name="message" 
+                              #message 
+                              placeholder="Your Message"
+                              [(ngModel)]="model.message" 
+                              #message="ngModel"
+                              [ngClass]="{ 'is-invalid': f.submitted && message.invalid }" required></textarea>
                             </div>
                           </div>
                         </div>
