--- a/src/app/profile/experience/experience.component.html
+++ b/src/app/profile/experience/experience.component.html
@@ -19,11 +19,11 @@
                                     </div>    
                                     <div class="col-lg-6">       
                                         <ul>
-                                            <li class="list">Core Functionality</li>
+                                            <li class="list mt-0 title">Core Functionality</li>
                                             <ul>
                                                 <li align="justify" style="list-style: circle;">Web Development</li>
                                             </ul>
-                                            <li class="list">Technologies and Language</li>
+                                            <li class="list mt-0 title">Technologies and Language</li>
                                             <ul>
                                                 <div class="row">
                                                     <div class="col-md-6">
@@ -63,11 +63,11 @@
                                     </div>    
                                     <div class="col-lg-6">       
                                         <ul>
-                                            <li class="list">Core Functionality</li>
+                                            <li class="list mt-0 title">Core Functionality</li>
                                             <ul>
                                                 <li align="justify" style="list-style: circle;">Software Development</li>
                                             </ul>
-                                            <li class="list">Technologies and Language</li>
+                                            <li class="list mt-0 title">Technologies and Language</li>
                                             <ul>
                                                 <div class="row">
                                                     <div class="col-md-6">
