--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -15,6 +15,9 @@
       <div class="card-body">
         <h4 class="card-title">{{p.title}}</h4>
         <h5 class="card-text"><b>Technology :</b>{{p.technologies}}</h5>
+        <!--
+          <a *ngIf="p.url" [href]="p.url" target="_blank">Check it !</a>
+        -->
       </div>
     </div>
   </div>
