--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -4,7 +4,10 @@
     <div class="h4 text-center mb-4 title">Projects</div>      
     <div class="row">
   
-    <div class="col-md-4 col-sm-6 animate-box" *ngFor="let p of allProjects" data-animate-effect="fadeInLeft">
+    <div 
+    class="col-md-6 col-sm-6 animate-box" 
+    *ngFor="let p of allProjects" 
+    data-animate-effect="fadeInLeft">
     <div class="blog-entry">
     <div class="card" >
       <img 
